# OMFLParser

./: .gitignore  CMakeLists.txt  README.md
lib/: parser.cpp  parser.h
tests/: test_format.cpp  test_parser.cpp
